Fix spacing between name and epithet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@
 }
 
 .epithet {
-    margin-left: 1vw;
+    margin-left: 0.8vw;
     color: #ff0000;
     font-size: 4rem;
     font-weight: 400;
